--- a/frontend/src/screens/HomeScreen.css
+++ b/frontend/src/screens/HomeScreen.css
@@ -5,7 +5,7 @@
 
 .homescreen__title{
     font-size: 1.5rem;
-    color: black;
+    color: whitesmoke;
     margin-bottom: 1rem;
     margin-left: 1px;
 }
